--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -29,28 +29,34 @@
   margin-right: 1em;
 }
 
-
 .about h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid rgb(44, 46, 58); /* The typwriter cursor */
+  border-right: 0.15em solid rgb(44, 46, 58); /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .01em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(50, end),
-    blink-caret .75s step-end infinite;
+  letter-spacing: 0.01em; /* Adjust as needed */
+  animation: typing 3.5s steps(50, end), blink-caret 0.75s step-end infinite;
 }
 
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 60% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 60%;
+  }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: rgb(44, 46, 58); }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(44, 46, 58);
+  }
 }
 
 @media (max-width: 600px) {
@@ -58,12 +64,11 @@
     align-items: flex-start;
     margin-top: 2em;
   }
-  
-@media (max-width: 390px) {
-  .app .about {
-    align-items: center;
-    margin-top: 2em;
-  }
-  
-}}
 
+  @media (max-width: 390px) {
+    .app .about {
+      align-items: center;
+      margin-top: 2em;
+    }
+  }
+}
