--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,7 @@
 /* Style inputs, select elements and textareas */
-input[type=text], select, textarea{
+input[type="text"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -8,7 +10,9 @@ input[type=text], select, textarea{
   resize: vertical;
 }
 
-input[type=email], select, textarea{
+input[type="email"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -23,7 +27,7 @@ input[type=email], select, textarea{
 } */
 
 /* Style the submit button */
-input[type=submit] {
+input[type="submit"] {
   background-color: #8e9f99;
   color: white;
   padding: 12px 20px;
@@ -43,7 +47,6 @@ input[type=submit] {
   border-radius: 5px;
   background-color: #fcfcfc;
   padding: 20px;
-
 }
 
 /* Floating column for labels: 25% width */
@@ -69,7 +72,9 @@ input[type=submit] {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .first, .second, input[type=submit] {
+  .first,
+  .second,
+  input[type="submit"] {
     width: 100%;
     margin-top: 5;
   }
